--- a/index.htm
+++ b/index.htm
@@ -2,14 +2,70 @@
 <html>
 <head>
 <title>Mayan Calendar</title>
-<link rel="stylesheet" href="main.css" />
+<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+<link href="lib/datepicker/css/datepicker.css" rel="stylesheet" media="screen">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+</head>
+<body>
+<div class="container">
+    <h1>Mayan Calendar</h2>
+    <div class="well">
+        <label>Gregorian Date</label>
+        <input type="text" id="dp1" />
+    </div>
+    <div id="stela" class="well navbar-fixed-bottom" style="text-align:center">
+</div>
+</div>
+
+
 <script src="lib/astro.js"></script>
 <script src="lib/calendar.js"></script>
 <script src="mayan.js"></script>
-</head>
-<body>
-<canvas id="canvas">
-    <h2>You must use a modern browser to see this canvas.</h2>
-</canvas>
+<script src="lib/jquery-1.8.3.min.js"></script>
+<script src="lib/bootstrap/js/bootstrap.js"></script>
+<script src="lib/datepicker/js/bootstrap-datepicker.js"></script>
+<script>
+(function(){
+    var cal = new Mayan.LongCount;
+    var stela;
+
+    var getImgTag = function(name) {
+        return '<img src="'+Mayan.glyphs[name]+'"/>';
+    };
+
+    var updateGlyphs = function(year,month,day) {
+        cal.setFromGregorian(year,month,day);
+        stela.html('');
+        stela.append(getImgTag(cal.baktun)+getImgTag('baktun'));
+        stela.append(getImgTag(cal.katun)+getImgTag('katun'));
+        stela.append(getImgTag(cal.tun)+getImgTag('tun'));
+        stela.append(getImgTag(cal.winal)+getImgTag('winal'));
+        stela.append(getImgTag(cal.kin)+getImgTag('kin'));
+        stela.append(getImgTag(cal.tzolkin.getNumName())+getImgTag(cal.tzolkin.getDayName()));
+        stela.append(getImgTag(cal.haab.getDayName())+getImgTag(cal.haab.getMonthName()));
+        stela.append(getImgTag(cal.lords.toString()));
+    };
+
+    $(function(){
+        stela = $("#stela");
+        var updateDate = function(d) {
+            updateGlyphs(d.getFullYear(), d.getMonth()+1, d.getUTCDate());
+        };
+
+        $('#dp1').datepicker({
+            format: 'mm-dd-yyyy'
+        }).on('changeDate', function(ev) {
+            updateDate(ev.date);
+        });
+
+        var d = new Date();
+        $('#dp1').datepicker('setValue', d);
+        updateDate(d);
+    });
+
+})();
+</script>
+
 </body>
 </html>
