--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Mayan Calendar</title>
 <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
 <link href="lib/datepicker/css/datepicker.css" rel="stylesheet" media="screen">
@@ -21,12 +22,17 @@
 
 
 <script src="lib/requestAnimationFrame.js"></script>
+
 <script src="lib/astro.js"></script>
 <script src="lib/calendar.js"></script>
+
 <script src="mayan/calendar.js"></script>
 <script src="mayan/glyphs.js"></script>
 <script src="mayan/stela.js"></script>
+<script src="mayan/counter.js"></script>
 <script src="mayan/renderer.js"></script>
+<script src="mayan/tests.js"></script>
+
 <script src="lib/jquery-1.8.3.min.js"></script>
 <script src="lib/bootstrap/js/bootstrap.js"></script>
 <script src="lib/datepicker/js/bootstrap-datepicker.js"></script>
@@ -46,6 +52,7 @@
 
         var d = new Date();
         $('#dp1').datepicker('setValue', d);
+        cal.setFromDateObject(d);
 
         requestAnimationFrame(function(){renderer.render();});
 
