--- a/index.htm
+++ b/index.htm
@@ -3,28 +3,38 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Mayan Calendar</title>
+
 <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-<link href="lib/datepicker/css/datepicker.css" rel="stylesheet" media="screen">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+<link href="lib/jquery-ui-bootstrap/css/custom-theme/jquery-ui-1.8.16.custom.css" rel="stylesheet">
+
+<style>
+    #gregorian {
+        font-family: "Courier New";
+    }
+</style>
+
 </head>
 <body>
 <div class="container">
     <h1>Mayan Calendar</h2>
     <div class="well">
+<!--
         <label>Gregorian Date</label>
         <input type="text" id="dp1" />
+-->
+        <label id="gregorian"></label>
+        <div id="slider"></div>
     </div>
     <div class="well navbar-fixed-bottom" style="text-align:center">
-            <canvas id="stela" width="0" height="0"></canvas>
+        <canvas id="stela" width="0" height="0"></canvas>
     </div>
 </div>
 
 
 <script src="lib/requestAnimationFrame.js"></script>
 
-<script src="lib/astro.js"></script>
-<script src="lib/calendar.js"></script>
+<script src="lib/fourmilab/astro.js"></script>
+<script src="lib/fourmilab/calendar.js"></script>
 
 <script src="mayan/calendar.js"></script>
 <script src="mayan/glyphs.js"></script>
@@ -33,23 +43,89 @@
 <script src="mayan/renderer.js"></script>
 <script src="mayan/tests.js"></script>
 
-<script src="lib/jquery-1.8.3.min.js"></script>
+<script src="lib/jquery-ui-bootstrap/js/jquery-1.6.2.min.js"></script>
+<script src="lib/jquery-ui-bootstrap/js/jquery-ui-1.8.16.custom.min.js"></script>
 <script src="lib/bootstrap/js/bootstrap.js"></script>
-<script src="lib/datepicker/js/bootstrap-datepicker.js"></script>
+<script>
+// zero-padding from: 
+// http://stackoverflow.com/questions/1267283/how-can-i-create-a-zerofilled-value-using-javascript
+function paddy(n, p, c) {
+    var pad_char = typeof c !== 'undefined' ? c : '0';
+    var pad = new Array(1 + p).join(pad_char);
+    return (pad + n).slice(-pad.length);
+}
+
+// get current date from:
+// http://stackoverflow.com/questions/1531093/how-to-get-current-date-in-javascript
+function todaysdate() {
+    var today = new Date();
+    var day = today.getDate();
+    var month = today.getMonth()+1; //January is 0!
+    var year = today.getFullYear();
+    return [year,month,day];
+}
+
+// extra date conversion functions
+
+function mayan_days_to_gregorian(count) {
+    return jd_to_gregorian(MAYAN_COUNT_EPOCH + count);
+}
+
+function gregorian_to_mayan_days(year, month, day) {
+    return gregorian_to_jd(year,month,day) - MAYAN_COUNT_EPOCH;
+}
+
+var mayan_days_to_gregorian_str = function(count) {
+    var greg = mayan_days_to_gregorian(count);
+    var year = greg[0];
+    var month = greg[1];
+    var day = greg[2];
+
+    var yearStr, monthStr, dayStr;
+
+    dayStr = paddy(day,2);
+
+    yearStr = "";
+    if (year <= 0) {
+        year = -year+1;
+        yearStr += " BC";
+    }
+    else {
+        yearStr += " AD";
+    }
+    yearStr = paddy(year,4) + yearStr;
+
+    monthStr = [ "", "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec", ][month];
+
+    //return dayStr + " " + monthStr + " " + yearStr;
+    return monthStr + " " + dayStr + ", " + yearStr;
+};
+
+</script>
 <script>
 
     $(function(){
 
         var renderer = new Mayan.Renderer(document.getElementById('stela'));
 
-        $('#dp1').datepicker({
-            format: 'mm-dd-yyyy'
-        }).on('changeDate', function(ev) {
-            renderer.targetCal.setFromDateObject(ev.date);
+        var gregorianLabel = $('#gregorian');
+
+        var d = todaysdate();
+        var updateCount = function(count) {
+            renderer.targetCal.setFromCount(count);
+            gregorianLabel.html(mayan_days_to_gregorian_str(count));
+        };
+        var initialCount = gregorian_to_mayan_days.apply(null, d);
+        updateCount(initialCount);
+        $('#slider').slider({
+            min:0,
+            range: "min",
+            max:2880000,
+            step:1,
+            slide: function(evt,ui) { updateCount(ui.value); },
+            change: function(evt,ui) { updateCount(ui.value); },
+            value: initialCount,
         });
-        var d = new Date();
-        $('#dp1').datepicker('setValue', d);
-        renderer.targetCal.setFromDateObject(d);
 
         Mayan.loadGlyphs(function() {
             renderer.stela.updateCanvasSize();
